# cuda-enum-classes-example

./: CMakeLists.txt  cuda_helper.h  dummy.cpp  enum.h  main.cu  managed.h
